1. 分离广告场景

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     // implementation 'com.hauyu:alive:3.0.6-SNAPSHOT'
     if (useProject) {
         implementation project(":adsdk")
+        // implementation project(":adscene")
     } else {
         implementation 'com.hauyu:adsdk:+'
     }
