--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 mopub.avidEnabled=false
 mopub.moatEnabled=false
+android.useAndroidX=true
